--- a/demos/src/style.css
+++ b/demos/src/style.css
@@ -38,8 +38,8 @@ h1 {
 
 button {
   border-radius: 4px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 1px solid #333;
+  padding: 0.6em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
